# OpenWars

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
docs/: MAPS-FORMAT.md
src/: .main.cpp.swp  defs.hpp  main.cpp  nuclei.cpp  nuclei.hpp
src/codec/: media-player.cpp  media-player.hpp  player.hpp
src/codec/mpeg1/: mpeg1-dec.hpp
src/config/: .config.cpp.swp  .config.h.swp  config.cpp  config.h  config.hpp
src/core/: colors.hpp  core.cpp  core.hpp  vector.hpp
src/core/assets/: assets.cpp  assets.hpp
src/core/config/: config.cpp  config.hpp
src/core/drawing/: collision.cpp  collision.hpp  shapes.cpp  shapes.hpp  spritesheet.cpp  spritesheet.hpp  text.cpp  text.hpp
src/crypto/: owh1.cpp  owh1.hpp  random.cpp  random.hpp  sha1.cpp  sha1.hpp  sha2.cpp  sha2.hpp
src/game/: movement.hpp  types.hpp
src/game/ai/: a_star.cpp  a_star.hpp
src/game/co/: co.cpp  co.hpp
src/game/lua/: lua.hpp
src/game/map/: .crc32.cpp.swp  .map.cpp.swp  .map.h.swp  .tiles.cpp.swp  codeve.cpp  crc32.cpp  map.cpp  map.h  map.hpp  mapgen.cpp  mapgen.hpp  renderer.cpp  renderer.hpp  terrain.cpp  terrain.hpp  tiles.cpp  tiles.hpp  tiletype.cpp  tiletype.hpp
src/game/scene/: game.cpp  game.hpp  main_scene.cpp  manager.cpp  menu.cpp  menu.hpp  scene.hpp  scene_controller.cpp  scenes.cpp
src/game/task/: task.cpp  task.hpp
src/game/units/: damage.cpp  damage.hpp  definition.hpp  registry.cpp  registry.hpp  renderer.cpp  renderer.hpp  unit.cpp  unit.hpp  unit_types.cpp  unit_types.hpp
src/input/: .mouse_handler.cpp.swp  mouse_handler.cpp
src/io/: clay.cpp  clay.hpp  clay_math.cpp  clay_math.hpp  files.cpp  files.hpp  keyboard.cpp  keyboard.hpp  log.cpp  log.hpp  mouse.cpp  mouse.hpp  stream.cpp  stream.hpp
src/io/events/: events.cpp  events.hpp
src/io/fs/: filesystem.cpp  filesystem.hpp
src/io/graphics/: camera.cpp  camera.hpp  graphics.cpp  graphics.hpp
src/io/input/: input.cpp  input.hpp
src/io/log/: logging.cpp  logging.hpp
src/logic/ai/: a_star.cpp  a_star.hpp  goap.cpp  goap.hpp
src/logic/lua/: lua.cpp  lua.hpp
src/logic/task/: task.cpp  task.hpp
src/misc/: auditor.cpp  auditor.hpp  localization.hpp  random.cpp  random.hpp  script-parser.hpp
src/sound/: sound.cpp  sound.hpp
src/ui/: colors.hpp  handler.cpp  theme.cpp  theme.hpp  ui.hpp
src/ui/components/: button.cpp  button.hpp  carousel.cpp  carousel.hpp  components.hpp  layout.cpp  popup.cpp  popup.hpp
src/utils/: drawing.cpp  drawing.hpp  math.cpp  math.hpp
src/visual/: visual.cpp  visual.hpp
